testdata/golden/sema/valid/string_concat_nested.fmt
fn main() {
    print("a" + ("b" + "c"));
}
