testdata/golden/sema/invalid/entrypoint_multiple_module/only.fmt
pragma module;

@entrypoint
fn first() {}

@entrypoint
fn second() {}
